creando modal reutilizable, creando componente categorias part 1

--- a/public/assets/css/structure.css
+++ b/public/assets/css/structure.css
@@ -12,15 +12,15 @@ html {
   min-height: 100%; }
 
 body {
-  color: #888ea8;
+  /* color: #888ea8;
   height: 100%;
   font-size: 0.875rem;
   background: #f1f2f3;
   overflow-x: hidden;
   overflow-y: auto;
   letter-spacing: 0.0312rem;
-  font-family: 'Quicksand', sans-serif; }
-
+  font-family: 'Quicksand', sans-serif; } */
+}
 h1, h2, h3, h4, h5, h6 {
   color: #3b3f5c; }
 
