--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -19,8 +19,8 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   letter-spacing: 0.0312rem;
-  font-family: 'Quicksand', sans-serif; }
-
+  /* font-family: 'Quicksand', sans-serif; } */
+}
 h1, h2, h3, h4, h5, h6 {
   color: #3b3f5c; }
 
@@ -395,6 +395,7 @@ select.form-control.form-custom {
 
 .dropdown-toggle:after, .dropup .dropdown-toggle::after, .dropright .dropdown-toggle::after, .dropleft .dropdown-toggle::before {
   display: none; }
+
 
 .dropdown-toggle svg.feather[class*="feather-chevron-"] {
   width: 15px;
