--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -62,7 +62,7 @@
 	right: 15px;
 	bottom: 15px;
 	z-index: 99999;
-	background: #4154f1;
+	background: #3b3f5c;
 	width: 40px;
 	height: 40px;
 	border-radius: 4px;
@@ -74,7 +74,7 @@
 	line-height: 0;
   }
   .back-to-top:hover {
-	background: #6776f4;
+	background: #565c84;
 	color: #fff;
   }
   .back-to-top.active {
