--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1068,3 +1068,89 @@
 	font-size: 13px;
 	color: #012970;
   }
+
+
+
+
+
+
+  /* Nuevo */
+  .sales .widget {
+    position: relative;
+    padding: 20px;
+    border-radius: 8px;
+    border: none;
+    background: #fff;
+}
+
+
+.widget-chart-one .widget-heading .tabs a {
+    font-size: 14px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    padding: 5px 7px;
+    background: #3b3f5c;
+    color: #fff;
+    border-radius: 4px;
+}
+
+.btn-dark {
+    color: #fff;
+    background-color: #3b3f5c;
+    border-color: #3b3f5c;
+	padding: 0.4375rem 1.25rem;
+    text-shadow: none;
+    font-size: 14px;
+    font-weight: normal;
+    white-space: normal;
+    word-wrap: break-word;
+    transition: .2s ease-out;
+    touch-action: manipulation;
+    cursor: pointer;
+    box-shadow: 0px 5px 20px 0 rgb(0 0 0 / 10%);
+    will-change: opacity, transform;
+    transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out;
+}
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+.widget-chart-one .widget-heading .tabs li {
+    display: inline-block;
+    list-style: none;
+    padding: 0 0;
+}
+
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+/* END Nuevo */
